--- a/site/includes/components/header.njk
+++ b/site/includes/components/header.njk
@@ -10,10 +10,10 @@
 		Navigation überspringen
 	</a>
 	<nav class="flex items-center justify-between flex-wrap bg-light py-x1 md:py-0
-																																													px-x1p5">
+																																																			px-x1p5">
 		<div class="relative flex justify-between flex-wrap w-full">
 			<div class="flex justify-between flex-wrap w-full items-center flex-shrink-0
-																																																																											text-white mr-6">
+																																																																																					text-white mr-6">
 				<a href="." title="Startseite aufrufen" class="text-x2 text-primary md:text-x0p75 lg:text-x0p25 mt-1 ">
 					<strong>
 						Musikversicherung
@@ -21,7 +21,7 @@
 					</strong>
 				</a>
 				<div class="mobile-icon md:hidden w-x1p5 h-x1">
-					<div class="middle-line"/>
+					<div class="middle-line"></div>
 				</div>
 				<div class="mobile-menu relative md:relative bg-light md:bg-transparent top-0 w-screen block px-x1p5 pb-x2 mt-x3 -mx-x1p5 md:mt-0 md:py-x0p5 md:mb-0 md:flex md:items-center md:w-auto">
 					<div class="text-x3 md:text-x0p75 lg:text-x0p25 md:flex-grow">
