--- a/site/includes/components/footer.njk
+++ b/site/includes/components/footer.njk
@@ -1,7 +1,7 @@
 <footer class="text-primary p-x1p5 text-x2 md:text-x0p5">
 	<hr class="border-t md:border-t-x0p1 border-primary mb-x1 md:mb-x0p5"/>
 	<div class="flex flex-col md:flex-row justify-between md:items-center mb-x1
-			    md:mb-x0p5">
+						    md:mb-x0p5">
 		<div class="flex-1 flex flex-col md:flex-row space-between">
 			<a href="tel:+4951919313199" class="flex-1 hover:underline mb-x0p5 md:mb-0" title="B!-Das Versicherungsbüro anrufen">
 				Tel.: +49 5191 931 31 99
@@ -53,7 +53,7 @@
 				Versicherungsbedingungen
 			</a>
 			&nbsp; · &nbsp;
-			<a href="https://musikversicherung.com/Beschwerdeverfahren.pdf" class="hover:underline mb-x0p5 md:mb-0" title="Beschwerden-Seite aufrufen">
+			<a href="/Beschwerdeverfahren.pdf" class="hover:underline mb-x0p5 md:mb-0" title="Beschwerden-Seite aufrufen">
 				Beschwerden
 			</a>
 
