--- a/site/includes/components/home/2-types.njk
+++ b/site/includes/components/home/2-types.njk
@@ -10,7 +10,7 @@
 
 	<p class="mb-x2 md:mb-x1 text-center text-black">Das perfekte Duo</p>
 	<div class="md:flex text-center">
-		<div class="px-x3 py-x2 md:px-x1 md:py-x1 bg-gradient-secondary mb-x1p5 md:mb-0 md:mr-x1 w-full">
+		<div class="px-x3 py-x2 md:px-x1 md:py-x1 bg-secondary mb-x1p5 md:mb-0 md:mr-x1 w-full">
 			<h2 class="text-white uppercase text-x7 md:text-x3 leading-tighter">
 				Sinfonima
 				<span class="sup">®</span>
@@ -21,7 +21,7 @@
 				klassische Instrumente
 			</p>
 		</div>
-		<div class="px-x3 py-x2 md:px-x1 md:py-x1 bg-gradient w-full">
+		<div class="px-x3 py-x2 md:px-x1 md:py-x1 bg-primary w-full">
 			<h2 class="text-white uppercase text-x7 md:text-x3 leading-tighter ">
 				I’m sound
 				<span class="sup">®</span>
