--- a/site/includes/components/home/8-instruments-and-more.njk
+++ b/site/includes/components/home/8-instruments-and-more.njk
@@ -12,7 +12,7 @@
 </style>
 #}
 <section class="md:relative md:mb-x6">
-	<div class=" px-x1p5 pt-x3 md:p-x1p5 bg-gradient text-white md:mx-x1p5
+	<div class=" px-x1p5 pt-x3 md:p-x1p5 bg-primary text-white md:mx-x1p5
 			    md:relative md:z-10 h-auto">
 		<h3 class="text-x6 md:text-x1p5 mb-x1 leading-tight md:mb-x0p5 font-medium
 				      block whitespace-normal">
