--- a/site/index.njk
+++ b/site/index.njk
@@ -56,6 +56,7 @@ paragraph: "Versicherungsschutz besteht sowohl dann, wenn der Schaden selbst ver
 			<h2>blub</h2>
 		{% endfor %}
 		asd
+		{{ reviews.name }}
 
 
 		{% include "components/home/2-types.njk" %}
