--- a/site/includes/components/home/3-as-it-should-be.njk
+++ b/site/includes/components/home/3-as-it-should-be.njk
@@ -3,18 +3,14 @@
 </script>
 #}
 <section class="md:relative overflow-hidden md:h-screen">
-	<div class="float-right md:w-1/2 px-x1p5 py-x3 md:p-x1p5 bg-gradient-secondary
-												    text-white md:mt-x2 md:mx-x1p5 md:relative md:z-10">
+	<div class="float-right md:w-1/2 px-x1p5 py-x3 md:p-x1p5 bg-secondary text-white md:mt-x2 md:mx-x1p5 md:relative md:z-10">
 		<h3 class="text-x5 md:text-x1p5 mb-x1 leading-tight md:mb-x0p5 font-medium ">
 			Instrumentenversicherung so,
 			<!-- <br class="md:hidden" /> -->
 			wie sie sein sollte
 		</h3>
 		<p class="text-x2 mb-x1 md:text-x0p5 md:mb-x0p5">
-			SINFONIMA für klassische Instrumente und I’M SOUND für elektronisches
-												      Equipment bieten eine sehr umfassende Allgefahrendeckung. Mit der
-												      Instrumentenversicherung und der Equipmentversicherung sind nahezu alle
-												      Beschädigungs- oder Verlustrisiken abgesichert.
+			SINFONIMA für klassische Instrumente und I’M SOUND für elektronisches Equipment bieten eine sehr umfassende Allgefahrendeckung. Mit der Instrumentenversicherung und der Equipmentversicherung sind nahezu alle Beschädigungs- oder Verlustrisiken abgesichert.
 		</p>
 	</div>
 	<div
