--- a/site/includes/components/cookie-notice.njk
+++ b/site/includes/components/cookie-notice.njk
@@ -1,20 +1,14 @@
----js
-{
-  title: "My page title",
-  currentDate: function() {
-    // You can have a JavaScript function here!
-    return (new Date()).toLocaleString();
-  }
-}
----
-<div class="w-full bg-primary-light p-x1p5 md:px-x1p5 md:py-x0p5 md:flex fixed bottom-0 z-10 text-x2 md:text-x0p5 lg:text-x0p25">
+<div class="w-full bg-primary-light p-x1p5 md:px-x1p5 md:py-x0p5 md:flex fixed bottom-0 z-10 text-x2 md:text-x0p5 lg:text-x0p25" data-cookie-notice>
 	<p class="md:mr-x1 mb-x1 md:mb-0">
 		Cookies helfen uns bei der Bereitstellung unserer Inhalte und Dienste. Durch die weitere Nutzung der Webseite stimmst Du der Verwendung von Cookies und Google Analytics zu.
 		<a rel="prefetch" href="/datenschutz" title="Datenschutzerklärung aufrufen" class="underline">
 			Mehr erfahren
 		</a>
 	</p>
-	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light">
+	{# <button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick="console.log(document.querySelector('[data-accept-cookies]'))" data-accept-cookies> #}
+	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick='acceptCookies();' data-accept-cookies>
+
+
 		Verstanden!
 	</button>
 </div>
