--- a/site/kontakt.njk
+++ b/site/kontakt.njk
@@ -5,7 +5,7 @@ meta_description: Musikinstrumente, Equipment und Zubehör einfach online versic
     ✅ weltweiter Schutz ✅ auch im Auto ✅ kostenlose, individuelle Beratung
     vom Experten
 body_class: home
-title: Welcome to Skeleventy!
+title: Kontakt
 ---
 
 <main id="main" class="" tabindex="-1">
@@ -25,7 +25,7 @@ title: Welcome to Skeleventy!
         "url": "{{ site.url }}{{ page.url }}",
         "email": "{{ site.contact.email }}",
         "telephone": "{{ site.contact.phone }}",
-        "priceRange": "£",
+        "priceRange": "€",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "{{ site.address.street }}",
@@ -34,14 +34,10 @@ title: Welcome to Skeleventy!
             "addressCountry": "{{ site.address.country }}"
         },
         "sameAs": [
-            "{{ site.social_links.twitter }}",
-            "{{ site.social_links.facebook }}",
-            "{{ site.social_links.instagram }}"
+            "{{ site.social_links.facebook }}"
         ]
     }
     </script> #}
-
-
 </main>
 
 
