--- a/site/includes/components/faq-item.njk
+++ b/site/includes/components/faq-item.njk
@@ -3,7 +3,6 @@
 		{{ faq.question }}
 	</div>
 	<div itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
-		<div itemprop="text" class="mb-x1 md:mb-x1 opacity-75">{{ faq.answer }}</div>
-
+		<div itemprop="text" class="mb-x1 md:mb-x1 opacity-75">{{ faq.answer | safe }}</div>
 	</div>
 </div>
