--- a/site/index.njk
+++ b/site/index.njk
@@ -51,14 +51,18 @@ paragraph: "Versicherungsschutz besteht sowohl dann, wenn der Schaden selbst ver
 		{# include hero, types, as-it-should-be, headline-w-text, no-deductable  component #}
 		{% include "components/home/1-hero.njk" %}
 
-		{% for review in reviews %}
-			<p>{{ review.name }}</p>
+		{% for key, review in reviews %}
+<p>{{ review.date | dateDisplay }}</p>
+
+
 			<p>{{ review.rating }}</p>
-			<p>{{ review.review }}</p>
+			<p>{{ review.name }}</p>
+			<p>{{ review.review }}</p><br/>
 		{% endfor %}
 		asd
-{{ reviews.reviewaaa }}
-{{ reviews.reviewaaa.name }}
+{{ reviews.reviewaab.name }}
+
+{# {{ reviews.name }} #}
 
 
 
