--- a/site/includes/components/review-item.njk
+++ b/site/includes/components/review-item.njk
@@ -1,25 +1,46 @@
-<div class="text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary
-										  pt-x0p5 mb-x0p5 md:mb-x0p25">
+<div class="text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary pt-x0p5 mb-x0p5 md:mb-x0p25">
 	<div class=" hidden">
 		<span itemprop="name">SINFONIMA/I'M SOUND Instrumentenversicherung</span>
 	</div>
 	<div class="md:flex items-center my-x0p5 md:mt-0 md:mb-x0p25 ">
-		<span>
-			<span itemprop="ratingValue" class="hidden">{{ review.rating }}</span>
-			<!-- <span itemprop="bestRating" class="hidden">5</span> -->
-			{# <StarRatingSimple rating={review.rating} class=""/> #}
-		</span>
 		<span class="flex text-primary mt-x0p5 md:mt-0 md:text-x0p25">
+			{% include "components/star-rating-simple.njk" %}
 			<span class="hidden md:inline">&nbsp;</span>
 			von&nbsp;
 			<span>
 				<p>{{ review.name }}</p>
 			</span>
 			&nbsp;am&nbsp;
-			<p>{{ review.date }}</p>
+			<p>{{ review.date | dateDisplay }}</p>
+
 		</span>
 	</div>
 	<p class="mb-x0p5 md:mb-x0p25">
 		{{ review.review }}
 	</p>
-</div></p></p></p>
+</div>
+
+{# 
+									<div class="text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary
+																			  pt-x0p5 mb-x0p5 md:mb-x0p25">
+										<div class=" hidden">
+											<span itemprop="name">SINFONIMA/I'M SOUND Instrumentenversicherung</span>
+										</div>
+										<div class="md:flex items-center my-x0p5 md:mt-0 md:mb-x0p25 ">
+											<span>
+												<span itemprop="ratingValue" class="hidden">{{ review.rating }}</span>
+											</span>
+											<span class="flex text-primary mt-x0p5 md:mt-0 md:text-x0p25">
+												<span class="hidden md:inline">&nbsp;</span>
+												von&nbsp;
+												<span>
+													<p>{{ review.name }}</p>
+												</span>
+												&nbsp;am&nbsp;
+												<p>{{ review.date }}</p>
+											</span>
+										</div>
+										<p class="mb-x0p5 md:mb-x0p25">
+											{{ review.review }}
+										</p>
+									</div></p></p></p> #}
