--- a/site/includes/components/review-item-reduced.njk
+++ b/site/includes/components/review-item-reduced.njk
@@ -1,7 +1,8 @@
-<div class=" text-light text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary pt-x0p5 mb-x0p5 md:mb-x0p25">
-	<div class="md:flex items-center my-x0p5 md:mt-0 md:mb-x0p25 ">
+<div class=" text-light text-x2 md:text-x0p5 border-solid border-0 border-t-2 border-primary pt-x0p5">
+	<div class="md:flex items-center my-x0p5 md:m-0 ">
 		{% include "components/star-rating-simple.njk" %}
-		<span class="flex mt-x0p5 md:mt-0 md:text-x0p25">
+		<span class="flex mt-x0p5 md:mt-0 md:text-x0p25 opacity-75">
+
 			<span class="hidden md:inline">&nbsp;</span>
 			von&nbsp;
 			<span>
@@ -11,7 +12,7 @@
 			<p>{{ review.date | dateDisplay }}</p>
 		</span>
 	</div>
-	<p class="mb-x0p5 md:mb-x0p25">
+	<p class="mb-x0p5 md:m-0">
 		{{ review.review }}
 	</p>
 </div>
