cookie notice started

--- a/site/includes/components/home/5-recent-reviews.njk
+++ b/site/includes/components/home/5-recent-reviews.njk
@@ -33,7 +33,8 @@
 
 
 <section class="py-x3 w-100  md:flex flex-row text-light" id="reviews">
-	<img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="md:ml-x1p5 md:max-h-50vh md:w-2/5 md:my-x3 z-10 object-cover"/>
+	<img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" class="md:ml-x1p5 md:max-h-50vh md:w-2/5 md:my-x3 z-10 object-cover" [data-lazy]/>
+
 	<div class="content p-x1p5 pl-x6 relative md:bg-primary md:-ml-x4">
 		<h2 class=" font-medium text-x6 md:text-x2 flex-1 leading-tight md:mr-x0p5 ">
 			Alle zufrieden!
