--- a/site/includes/components/cookie-notice.njk
+++ b/site/includes/components/cookie-notice.njk
@@ -5,9 +5,8 @@
 			Mehr erfahren
 		</a>
 	</p>
-	{# <button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick="console.log(document.querySelector('[data-accept-cookies]'))" data-accept-cookies> #}
-	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick='acceptCookies();' data-accept-cookies>
-
+	{# <button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick="console.log(document.querySelector('[data-accept-cookies]'))" data-accept-cookies>test</button> #}
+	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick='cookieNotice.acceptCookies();' data-accept-cookies>
 
 		Verstanden!
 	</button>
