--- a/site/includes/components/home/3-as-it-should-be.njk
+++ b/site/includes/components/home/3-as-it-should-be.njk
@@ -14,6 +14,8 @@
 		</p>
 	</div>
 	<div
-		class="flex image md:absolute md:z-0 w-full top-0">{# <img sizes="100vw" srcset={`/images/sax_lcabmf/sax_lcabmf_c_scale,w_200.jpg 200w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_636.jpg 636w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_923.jpg 923w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1160.jpg 1160w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1374.jpg 1374w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1567.jpg 1567w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1746.jpg 1746w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1921.jpg 1921w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_2092.jpg 2092w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_2160.jpg 2160w`} src="/images/sax_lcabmf/sax_lcabmf_c_scale,w_2160.jpg" alt="Saxophon mit anderen Musikern im Hintergrund" class="z-10 "/> #}
+		class="flex image md:absolute md:z-0 w-full top-0">
+		{# <img sizes="100vw" srcset={`/images/sax_lcabmf/sax_lcabmf_c_scale,w_200.jpg 200w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_636.jpg 636w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_923.jpg 923w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1160.jpg 1160w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1374.jpg 1374w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1567.jpg 1567w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1746.jpg 1746w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_1921.jpg 1921w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_2092.jpg 2092w, /images/sax_lcabmf/sax_lcabmf_c_scale,w_2160.jpg 2160w`} src="/images/sax_lcabmf/sax_lcabmf_c_scale,w_2160.jpg" alt="Saxophon mit anderen Musikern im Hintergrund" class="z-10 "/> #}
+		<img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" alt="Schlagzeuger mit Band im Hintergrund" class="w-full"/>
 	</div>
 </section>
