--- a/site/index.njk
+++ b/site/index.njk
@@ -7,6 +7,7 @@ meta_description: Musikinstrumente, Equipment und Zubehör einfach online versic
 body_class: home
 title: Welcome to Skeleventy!
 ---
+{% from "components/home/4-text.njk" import text %}
 
 <main id="main" class="" tabindex="-1">
 
@@ -56,11 +57,12 @@ paragraph: "Versicherungsschutz besteht sowohl dann, wenn der Schaden selbst ver
 		{% endfor %} #}
 		{% include "components/home/2-types.njk" %}
 		{% include "components/home/3-as-it-should-be.njk" %}
-		{% include "components/home/4-headline-w-text.njk" %}
+		{{ text(headline="Weit mehr als nur eine Hausratdeckung", paragraph='Die SINFONIMA-Instrumentenversicherung und der I’M-SOUND-Equipmentschutz gehen weit über die Leistungen einer Hausratversicherung hinaus. Diese deckt in der Regel nur Schäden durch Feuer, Leitungswasser, Sturm/Hagel und Einbruchdiebstahl. Die Spezialversicherungen der Mannheimer Versicherung hingegen bieten Schutz bei fast allen Schäden, die durch äußere Einwirkungen entstehen. Das kann zum Beispiel ein Sturz, Umfallen, ein Transportschaden oder ein Verlust durch Diebstahl sein. In der Equipmentversicherung sind darüber hinaus auch Risiken gedeckt, die bei elektronischen Instrumenten und Geräten von Bedeutung sind – zum Beispiel Überspannungsschäden.') }}
 		{% include "components/home/5-recent-reviews.njk" %}
 		{% include "components/home/6-no-deductable.njk" %}
-
+		{{ text(headline="Für Hobby- & Berufsmusiker", paragraph="Es macht keinen Unterschied, ob Du Hobby- oder Berufsmusiker bist oder Deine Kinder die Instrumente nutzen. SINFONIMA und I’M SOUND schützen unabhängig davon immer gleich gut. Du kannst privat und beruflich genutzte Musikinstrumente versichern. Sammlungen sind ebenso versicherbar wie Instrumente von Schulklassen, Musikschulen, Orchestern, Kapellen, Vereinen und natürlich auch Bands. Auch geliehene Instrumente sind kein Problem.")}}
 		{% include "components/home/8-instruments-and-more.njk" %}
+		{{ text(headline="Egal, wer den Schaden verursacht hat", paragraph="Versicherungsschutz besteht sowohl dann, wenn der Schaden selbst verursacht, als auch, wenn er von Dritten verschuldet wird. Selbst grob fahrlässig herbeigeführte Schäden bis zu einer Höhe von 2.500 Euro fallen unter den Versicherungsschutz dieser Instrumentenversicherung. Das ist nicht selbstverständlich. Andere Anbieter kürzen bei der Regulierung oder leisten gar nicht. Oft gibt es bei Mitbewerbern keine Leistung, wenn ein Schaden von Familienangehörigen verursacht wird. Für SINFONIMA und I’M SOUND ist das alles kein Problem.")}}
 		{% include "components/home/10-more-advantages.njk" %}
 		{% include "components/home/11-video.njk" %}
 
