cookie notice implmented

--- a/site/includes/components/home/1-hero.njk
+++ b/site/includes/components/home/1-hero.njk
@@ -110,8 +110,8 @@ styleFullStarColor: "#fff"
 }</style>
 
 #}
-<section class="relative flex items-end md:items-center h-85vh -mt-x3 md:-mt-x1 text-center ">
-<div class="w-full md:h-full z-10 relative content md:w-10/12 md:flex md:flex-col md:justify-center mx-auto md:-mt-x1 px-x1p5">
+<section class="relative flex items-end md:items-center h-60vw md:max-h-75vh overflow-hidden -mt-x3 md:-mt-x1 text-center ">
+<div class="w-full z-10 relative content md:w-10/12 md:flex md:flex-col md:justify-center mx-auto md:-mt-x1 px-x1p5">
 	<div class="reviews md:mw-1/2">
 		<a href="#reviews" class="w-auto inline-flex text-white my-x1 md:my-x0p25 md:order-1 border boder-white border-x0p1 rounded-full hover:bg-black-x0p2 p-x0p5 md:py-x0p25 md:items-center ">
 			{# <StarRating
@@ -135,10 +135,10 @@ styleFullStarColor: "#fff"
 
 </div>
 
-<div class="absolute images top-0 z-0 h-85vh w-full overflow-hidden mw-full">
-	<div class="relative md:px-x1p5 w-full h-full">
+<div class="absolute images top-0 z-0 h-60vw w-full overflow-hidden mw-full">
+	<div class="relative md:px-x1p5 w-full">
 		<div
-			class="bg-primary h-full w-full">
+			class="bg-primary h-60vw w-full">
 			<img src="/images/piano_y1wv8n/piano_y1wv8n_c_scale,w_2160.jpg" />
 		</div>
 	</div>
