--- a/site/includes/components/cookie-notice.njk
+++ b/site/includes/components/cookie-notice.njk
@@ -6,8 +6,7 @@
 		</a>
 	</p>
 	{# <button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick="console.log(document.querySelector('[data-accept-cookies]'))" data-accept-cookies>test</button> #}
-	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" onclick='cookieNotice.acceptCookies();' data-accept-cookies>
-
+	<button class="w-full md:w-auto bg-primary px-x0p25 py-x0p5 md:p-x0p25 text-light" data-accept-cookies>
 		Verstanden!
 	</button>
 </div>
