--- a/css/main.css
+++ b/css/main.css
@@ -1147,6 +1147,30 @@ video {
   height: 6rem;
 }
 
+.icon {
+  /* content: ""; */
+  cursor: pointer;
+}
+
+.icon:before,
+.icon:after {
+  background-color: #6b46c1;
+  top: 45%;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  content: "";
+  display: inline-block;
+}
+
+.icon:before {
+  transform: rotate(-45deg);
+}
+
+.icon:after {
+  transform: rotate(45deg);
+}
+
 .space-y-0 > :not(template) ~ :not(template){
   --space-y-reverse: 0;
   margin-top: calc(0px * calc(1 - var(--space-y-reverse)));
