--- a/site/schaden-melden.njk
+++ b/site/schaden-melden.njk
@@ -8,7 +8,7 @@ body_class: home
 title: Kontakt
 ---
 
-<form id="form" method="post" class="text-x2 md:text-x1 lg:text-x0p5 px-x1p5" data-auto-save>
+<form id="schaden-form" method="post" class="text-x2 md:text-x1 lg:text-x0p5 px-x1p5" data-auto-save>
     <div>
         <!-- One "tab" for each step in the form: -->
         <div class="tab flex flex-col lg:w-4/6 m-auto" data-tab-one >
