--- a/site/includes/layouts/default.njk
+++ b/site/includes/layouts/default.njk
@@ -48,7 +48,7 @@
 		{# include header #}
 		{% include "components/header.njk" %}
 			<div
-			class="mt-x1 relative z-0"> {# include content #}
+			class="mt-x1 relative z-0" id="main"> {# include content #}
 			{{ content | safe }}
 
 			{# include footer #}
