neue bewertung page

--- a/site/anfrage.njk
+++ b/site/anfrage.njk
@@ -272,7 +272,7 @@ title: Anfrage
         </div>
         {# Prev/Next/Send Buttons #}
         <div class="grid gap-x0p5 grid-cols-2 md:flex md:justify-center">
-            <button type="button" id="prevBtn" class="primary-button order-2 w-full " tab-index="0">Zurück</button>
+            <button type="button" id="prevBtn" class="primary-button order-2 w-full">Zurück</button>
             <button type="button" id="nextBtn" data-submit="data-submit" class="primary-button order-2 w-full">Weiter</button>
         </div>
     </div>
