--- a/site/index.njk
+++ b/site/index.njk
@@ -70,29 +70,37 @@ paragraph: "Versicherungsschutz besteht sowohl dann, wenn der Schaden selbst ver
 
 
    {# an optional and basic local business schema example #}
-    {# <script type="application/ld+json">
-    {
-        "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "{{ site.name }}",
-        "image": "{{ site.url }}{{ site.images.logo }}",
-        "url": "{{ site.url }}{{ page.url }}",
-        "email": "{{ site.contact.email }}",
-        "telephone": "{{ site.contact.phone }}",
-        "priceRange": "£",
-        "address": {
-            "@type": "PostalAddress",
-            "streetAddress": "{{ site.address.street }}",
-            "addressLocality": "{{ site.address.city }}",
-            "postalCode": "{{ site.address.postcode }}",
-            "addressCountry": "{{ site.address.country }}"
-        },
-        "sameAs": [
-            "{{ site.social_links.twitter }}",
-            "{{ site.social_links.facebook }}",
-            "{{ site.social_links.instagram }}"
-        ]
-    }
-    </script> #}
-
+	<script type="application/ld+json">
+	{   "@context": "http://schema.org",
+    "@type": "Product",
+    image: "https://musikversicherung.com/social-image.jpg",
+    name: "SINFONIMA / I'M SOUND Instrumentenversicherung",
+    brand: {
+      "@type": "Brand",
+      name: "Mannheimer Versicherung AG"
+    },
+    aggregateRating: {
+      "@type": "AggregateRating",
+      ratingValue: {{ reviews | ratingAverage}}
+      reviewCount: {{ reviews | length }}
+    },
+    review: {% for review in reviews %}
+	{"@type": "Review",
+    author: {
+      "@type": "Person",
+      name: {{ review.name }}
+    },
+    datePublished: {{ review.date }},
+    reviewBody: {{ review.review }},
+    reviewRating: {
+      "@type": "Rating",
+      bestRating: "5",
+      ratingValue: {{ review.rating }},
+      worstRating: "1"
+    }}
+	{% endfor %},
+    description: "Deine Versicherung für Instrumente und Equipment."
+	}
+    </script> 
+  
 </main>
